Bug 88969 - Object-triggered animation can't work more than once
Summary: Object-triggered animation can't work more than once
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3.5.2 release
Hardware: Other Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-31 07:59 UTC by ahusni
Modified: 2025-04-25 15:41 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ahusni 2015-01-31 07:59:43 UTC
Object-triggered animation cannot be invoked more than once, i.e. we can't repeat an object-triggered animation by re-clicking the trigger object unless the slide containing the animation is reloaded. Microsoft Word 2003 can repeat such animation without reloading the slide.
Comment 1 Buovjaga 2015-01-31 14:27:58 UTC
Please give clear steps for reproducing.

I went through all the elements of custom animation and did a web search, but could not find anything related to what you describe.

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the information.
Comment 2 QA Administrators 2015-09-04 02:56:02 UTC Comment hidden (obsolete)
Comment 3 ahusni 2015-09-14 03:15:19 UTC
For example, make a Shape in Impress. By default, it will be named Shape 1. Make another Shape, that is Shape 2. Give Shape 1 a custom animation. Then, we go to Timing tab in effect options of Shape 1, click Trigger button, change the radio button from "Animate as part of click sequence" to "Start effect on click of". Choose Shape 2 as the trigger of this custom animation. Now, run the slide show. When the cursor hovers on Shape 2, it changes to a hand (according to computer setting of cursor appearance on clickable object, actually) notifying that Shape 2 is clickable to produce some results. If we click Shape 2, the custom animation of Shape 1 will be started. After that, we can no longer click Shape 2 to start the animation again unless we move away from that slide, maybe to the next or previous slide, then go back to that slide and click Shape 2 again. In Microsoft PowerPoint 2003, for example, we can restart a triggered animation anytime by clicking the trigger object. Please notify me if more information is necessary. Thank you for your help.
Comment 4 Buovjaga 2015-09-14 05:09:10 UTC
Ok, thanks for the explanation.
I confirm what you say.
Reverted unneeded version change.

Win 7 Pro 64-bit, Version: 5.0.1.2 (32-bit)
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: fi-FI (fi_FI)
Comment 5 ahusni 2015-09-15 06:59:55 UTC
Thank you very much for your confirmation. I really appreciate it. This problem prevents me using Impress to build an interactive presentation as a self-learning tool for my students. I hope this problem is going to be resolved soon.
Comment 6 QA Administrators 2016-09-20 10:32:53 UTC Comment hidden (obsolete)
Comment 7 ahusni 2016-09-22 02:06:28 UTC
The bug is still present in 5.1.5, Windows 7 64 bit. The problematic behavior is also still unchanged from my reported case.
Comment 8 Xisco Faulí 2017-09-29 08:52:39 UTC Comment hidden (obsolete)
Comment 9 ahusni 2018-11-05 08:49:34 UTC
I still experience this restrictive lack-of-feature in LO 6.0.6.2 under Windows 7 32 bit. Is there anything that might hinder this request to be addressed?
Comment 10 Commit Notification 2019-02-26 03:58:51 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7e18b87566c55b38ca812c28b01ed346d45e94b8%5E%21

tdf#88969 restart interactive sequence.

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Timur 2022-10-06 07:09:16 UTC
(In reply to Buovjaga from comment #4)
> I confirm what you say.

If you still have sample in this bug, please retest if the fix worked for you. 
To be tested with bug 151096.