tdf#88969 restart interactive sequence.

This patch allows the whole interactive sequence to
restart automatically when it's done. User don't
need to insert multiple pause toggle command to
a media object just for toggling the media
multiple times.

Change-Id: I000a55f580917327ae438ea8e79e62f63275cce7
Reviewed-on: https://gerrit.libreoffice.org/68283
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>